<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings_device_header">

        <SwitchPreference
            app:key="location_permission"
            app:title="@string/settings_background_location_title"/>


    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_about_header">

        <Preference
            app:key="@string/settings_version_key"
            app:title="@string/settings_version_title"
            app:summary="@string/settings_version_summary"
            app:enabled="false" />

        <Preference
            app:key="@string/settings_third_party_libs_key"
            app:title="@string/settings_third_party_libs_title"
            app:summary="@string/settings_third_party_libs_summary"
            app:fragment="com.example.junyoung.culivebus.ui.settings.ThirdPartySoftwareFragment"/>


    </PreferenceCategory>

</PreferenceScreen>