<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_no_wifi_no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/no_wifi_image_content_description"
        app:layout_constraintBottom_toTopOf="@+id/text_message_one_no_internet_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_bus_no_wifi_color" />

    <TextView
        android:id="@+id/text_message_one_no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/oxygen"
        android:text="@string/no_internet_connection_message_one"
        android:textColor="@color/textMainColor"
        app:layout_constraintBottom_toTopOf="@+id/text_message_two_no_internet_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_no_wifi_no_internet_connection" />

    <TextView
        android:id="@+id/text_message_two_no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/oxygen"
        android:text="@string/no_internet_connection_message_two"
        android:textColor="@color/textMainColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_try_again_no_internet_connection"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_message_one_no_internet_connection" />

    <TextView
        android:id="@+id/text_try_again_no_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/oxygen"
        android:text="@string/no_internet_connection_message_three"
        android:textColor="@color/text_button_color"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_message_two_no_internet_connection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_message_two_no_internet_connection" />

</androidx.constraintlayout.widget.ConstraintLayout>