<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data class="PermissionFragmentBinding">
        <variable
            name="viewModel"
            type="com.example.junyoung.culivebus.ui.permission.PermissionViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteY="25dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="64dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/logo_image_content_description"
            app:layout_constraintBottom_toTopOf="@+id/permissionImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cu_live_bus_icon" />

        <ImageView
            android:id="@+id/permissionImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"

            android:contentDescription="@string/permission_image_content_description"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImage"
            app:srcCompat="@drawable/ic_permission_map_image" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/oxygen"
            android:text="@string/location_permission_explanation"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permissionImage" />

        <TextView
            android:id="@+id/acceptPermissionButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_corner_button"
            android:fontFamily="@font/oxygen_bold"
            android:gravity="center"
            android:onClick="@{() -> viewModel.permissionButtonClicked()}"
            android:text="@string/ok_i_understand"
            android:textAlignment="gravity"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>